title mass dens lesson three

--- a/Lecture_notes/Lesson_3_Probability_enters.ipynb
+++ b/Lecture_notes/Lesson_3_Probability_enters.ipynb
@@ -15,7 +15,8 @@
     "\n",
     "* [Probability basics](#probability_basics) \n",
     "* [Probability axioms](#probability_axioms)\n",
-    "* [Random variables](#random_variables)"
+    "* [Random variables](#random_variables)\n",
+    "* [Probability mass and density functions](#probability_densities)"
    ]
   },
   {
@@ -232,6 +233,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Probability mass and density functions <a name=\"probability_densities\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -255,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
