Updates to lesson 3

--- a/Lecture_notes/Lesson_3_Probability_enters.ipynb
+++ b/Lecture_notes/Lesson_3_Probability_enters.ipynb
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A random variable X is a function that maps an outcome $\\omega$ to a numeric value. That is $X(\\omega) \\in \\mathbb{R}.$"
+    "A random variable (RV) X is a function that maps an outcome $\\omega$ to a numeric value. That is $X(\\omega) \\in \\mathbb{R}.$"
    ]
   },
   {
@@ -240,11 +240,65 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "There are two main types of random variables; Discrete and continuous.\n",
+    "\n",
+    "Some discrete examples.\n",
+    "* The number you roll on a dice.\n",
+    "* The number of tinder matches you get in a week. \n",
+    "* The of times you are late to work or school this year.\n",
+    "\n",
+    "Some continuous examples\n",
+    "* The amount of time you have to wait in a queue.\n",
+    "* The number of centermeters you grow this year.\n",
+    "* The number of minutes the bus is late."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We describe a discrete RV with a probability mass function (pmf) $p(x)$ which is $P(X=x)$.\n",
+    "\n",
+    "Let's work with the tinder example.\n",
+    "\n",
+    "Assume that the maximum number of matches I get in a we is 3 the a possible pmf could be\n",
+    "\n",
+    "$$ p(x) = \\begin{cases}0.2 \\quad \\text{if} \\quad x = 0\\\\\n",
+    "                    0.5 \\quad \\text{if} \\quad x = 1\\\\\n",
+    "                    0.2\\quad \\text{if} \\quad x = 2\\\\\n",
+    "                    0.1\\quad \\text{if} \\quad x = 3\\\\\n",
+    "    \\end{cases}$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In English this means that the\n",
+    "\n",
+    "* probability I get zero tinder matches is 0.2.\n",
+    "* probability I get one tinder matches is 0.5.\n",
+    "* probability I get two tinder matches is 0.2.\n",
+    "* probability I get three tinder matches is 0.1.\n",
+    "\n",
+    "Note that all the probabilities add to 1. This is axiom two."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We describe a continuous RV with a probability density function (pdf) $f(x)$. Techniquely $f(x)$ is not $P(X=x)$ as the probablity of a continous RV taking a single value is zero.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Let X be the amount of time in minutes you have to wait for coffee.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -263,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
