--- a/Lecture_notes/Lesson_3_Probability_enters.ipynb
+++ b/Lecture_notes/Lesson_3_Probability_enters.ipynb
@@ -16,7 +16,8 @@
     "* [Probability basics](#probability_basics) \n",
     "* [Probability axioms](#probability_axioms)\n",
     "* [Random variables](#random_variables)\n",
-    "* [Probability mass and density functions](#probability_densities)"
+    "* [Probability mass and density functions](#probability_densities)\n",
+    "* [Ninja training 3](#njt3)"
    ]
   },
   {
@@ -296,9 +297,33 @@
     "\n",
     "Example:\n",
     "\n",
-    "Let X be the amount of time in minutes you have to wait for coffee.\n",
-    "\n"
+    "Let $X$ be the amount of time in minutes you have to wait for coffee then a possible pdf for $X$ is \n",
+    "\n",
+    "$$f(x) = 2\\exp(-2x), \\quad \\quad\\quad x \\geq 0 $$\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ninja training 3 <a name=\"njt3\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Task 1:** Starting with the 3 probabiliity axioms prove the following.\n",
+    "\n",
+    "If $A$ is an event then $$\\mathbb{P}\\left(A^{c}\\right)=1-\\mathbb{P}(A).$$ Then given this result we have that $\\mathbb{P}(\\emptyset)=0$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -317,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
