Finish lesson three and sol

--- a/Lecture_notes/Lesson_3_Probability_enters.ipynb
+++ b/Lecture_notes/Lesson_3_Probability_enters.ipynb
@@ -319,6 +319,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Task 2:** Prove the following.\n",
+    "If $A$ and $B$ are events and $A \\subseteq B$ ($A$ is a subset of $B$) then $\\mathbb{P}(A) \\leq \\mathbb{P}(B)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Task 3:** For any two events $A$ and $B$ we have \n",
+    "\n",
+    "$$\\mathbb{P}(A \\cup B)=\\mathbb{P}(A)+\\mathbb{P}(B)-\\mathbb{P}(A \\cap B)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Task 4:**  This question only requires deep thought.\n",
+    "\n",
+    "Let $X$ be RV distributed exponetially with an intensity $\\lambda = 2$. In other words you it had this pdf.\n",
+    "$$f(x) = 2\\exp(-2x), \\quad \\quad\\quad x \\geq 0 $$\n",
+    "\n",
+    "Think about how one would calculate $\\mathbb{P}(X\\leq 2)=0$.\n",
+    "\n",
+    "You may need to use Google."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
