remove 0 small edit

--- a/Lecture_notes/Lesson_4_Python_does_not_leave.ipynb
+++ b/Lecture_notes/Lesson_4_Python_does_not_leave.ipynb
@@ -55,14 +55,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So from the picture a function takes some inputs and then transforms the inputs into outputs.\n",
+    "Function are great because it means we don't have to repeat ourselves when we code."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "So from the picture a function takes some inputs and then transforms the inputs into outputs.\n",
-    "Function are great because it means we don't have to re"
-   ]
+   "source": []
   }
  ],
  "metadata": {
