--- a/Lecture_notes/Lesson_3_Probability_enters.ipynb
+++ b/Lecture_notes/Lesson_3_Probability_enters.ipynb
@@ -344,7 +344,7 @@
     "Let $X$ be RV distributed exponetially with an intensity $\\lambda = 2$. In other words you it had this pdf.\n",
     "$$f(x) = 2\\exp(-2x), \\quad \\quad\\quad x \\geq 0 $$\n",
     "\n",
-    "Think about how one would calculate $\\mathbb{P}(X\\leq 2)=0$.\n",
+    "Think about how one would calculate $\\mathbb{P}(X\\leq 2)$.\n",
     "\n",
     "You may need to use Google."
    ]
@@ -373,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
