--- a/Lecture_notes/Lesson_7_What_to_expect.ipynb
+++ b/Lecture_notes/Lesson_7_What_to_expect.ipynb
@@ -13,15 +13,15 @@
    "source": [
     "## Contents\n",
     "\n",
-    "* [Cumulative distribution function](#cdf)\n",
-    "* [Ninja training 6](#njt6) "
+    "* [Expectation ](#expectation)\n",
+    "* [Ninja training 7](#njt7) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Expectation\n",
+    "## Expectation <a name=expectation></a>\n",
     "\n",
     "Often one would like to summurise the a probabilty distribution with one number. This is often the expection. Expection measures the center of mass of a distribution.\n"
    ]
@@ -202,7 +202,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great!!! Now let us have lets' have an example for the continuous case. "
+    "Great!!! Now let us have lets' have an example for the continuous case. Again there may be one or two steps in the you might not understand."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $X \\sim exp(\\lambda)$. Find the $\\mathbb{E}X$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "%%latex\n",
+    "\\begin{align}\n",
+    "\\mathbb{E}X&=\\int_{0}^{\\infty} x \\lambda e^{-\\lambda x} d x\\\\\n",
+    "&= \\left[-x e^{-\\lambda x}\\right]_{0}^{\\infty}+\\int_{0}^{\\infty} e^{-\\lambda x} d x\\\\\n",
+    "&= (0-0)+\\left[-\\frac{1}{\\lambda} e^{-\\lambda x}\\right]_{0}^{\\infty}\\\\\n",
+    "&= 0+\\frac{1}{\\lambda}\\\\\n",
+    "&= \\frac{1}{\\lambda}\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clearly, some of these calulations are very advanced. It is common to just look up the expectation in a book or on the internet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ninja training 7 <a name=njt7></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The variance is another way to summarize a RV. It measures how far a set of samples are from their expected value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Task 1:** \n",
+    "* Plot a normal density with mean 0 and low variance (just choose a small number).\n",
+    "* Plot a normal density with mean 0 and high variance (just choose a big number)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Task 2:**\n",
+    "\n",
+    "The variance is given by this formula,\n",
+    "\n",
+    "$$\\operatorname{Var}(X)=\\mathbb{E}\\left[(X-\\mu)^{2}\\right].$$\n",
+    "\n",
+    "However, after some calculation you can show that\n",
+    "\n",
+    "$$ \\operatorname{Var}(X)=\\mathbb{E}\\left[X^{2}\\right]-\\mathbb{E}[X]^{2}.$$\n",
+    "\n",
+    "Let $X \\sim bernoulli(p)$ that is\n",
+    "\n",
+    "$$ \\mathbb{P}(X = x)=\\left\\{\\begin{array}{ll}{1-p} & {\\text { if } x=0} \\\\ {p} & {\\text { if } x=1}\\end{array}\\right.$$\n",
+    "\n",
+    "Find $\\operatorname{Var}(X)$."
    ]
   },
   {
