Spell checked 1 and 2

--- a/Solutions/Solution_Ninja_training_2.ipynb
+++ b/Solutions/Solution_Ninja_training_2.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "If you are interested google \"binary\".\n",
     "\n",
-    "Python can convert numbers into to binary via the ```bin()``` the function."
+    "Python can display the binary representation via the ```bin()``` function."
    ]
   },
   {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -211,6 +211,13 @@
     "    else:\n",
     "        pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -229,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
