--- a/Lecture_notes/Lesson_1_Sets.ipynb
+++ b/Lecture_notes/Lesson_1_Sets.ipynb
@@ -40,8 +40,6 @@
    "source": [
     "A set is a collection of distinct objects.\n",
     "\n",
-    "That is it don't think about it too much.\n",
-    "\n",
     "A very important set you will work with all the time is the **sample space** which is the set of all possible outcomes. We will denote the sample space with the Greek letter $\\Omega$ (Omega)."
    ]
   },
@@ -56,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We perform operations on numbers. For example, 69 + 89. We also perform opertations on sets.\n"
+    "We perform operations on numbers. For example, 69 + 89. We also perform operations on sets.\n"
    ]
   },
   {
@@ -67,14 +65,14 @@
     "\n",
     "For example, let $A = \\{3,7\\}$ and $B = \\{3,69\\}$ then \n",
     "$$A \\cup B = \\{3,7,69\\}.$$\n",
-    "Notice that we donot count '3' twice."
+    "Notice that we do not count '3' twice."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exracting common elements is called the **intersection** We will denote a union the symbol $\\cap$.\n",
+    "Extracting common elements is called the **intersection** We will denote a intersection with the symbol $\\cap$.\n",
     "For example, \n",
     "$$A \\cap B  = \\{3\\}$$\n"
    ]
@@ -83,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Often humans learns better with pictures.\n",
+    "Often humans learn better with pictures.\n",
     "\n",
     "Consider sets A and B,"
    ]
@@ -122,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visually, we have that the union union and intersection are the following respectively."
+    "Visually, we have that the union and intersection are the following respectively."
    ]
   },
   {
@@ -150,18 +148,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can define all the elements not in a set. This is called the complement denoted by a subscript $c$. The complement of set $A$ is $A^C$.\n",
+    "We can define all the elements not in a set. This is called the complement denoted by a superscript $c$. The complement of set $A$ is $A^C$.\n",
     "\n",
     "For example let $\\Omega =  \\{1,2,3,4,5,6,7,8,9,10\\}$ and $E = \\{1,2,3,4,8,9,10\\}$ so \n",
     "\n",
-    "$$E^c = \\{5,6,7\\}$$\n"
+    "$$E^c = \\{5,6,7\\}.$$\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note, we have the exclusion operation denoted by \\.\n",
+    "Note, we have the exclusion operation denoted by \\\n",
     "\n",
     "$$\\Omega \\setminus E = \\{5,6,7\\} $$\n",
     "\n",
@@ -265,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
