finished spell check

--- a/Lecture_notes/Lesson_4_Python_does_not_leave.ipynb
+++ b/Lecture_notes/Lesson_4_Python_does_not_leave.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sometime the best way to describe something is with a picture."
+    "Sometimes the best way to describe something is with a picture."
    ]
   },
   {
@@ -94,7 +94,7 @@
     "* Start a function with the key word ```def```.\n",
     "* The function name is ```exp_denity ``` .\n",
     "* The inputs are ```x``` and ```rate```.\n",
-    "* The outputs is ```y```."
+    "* The output is ```y```."
    ]
   },
   {
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to start at number and go all the way to the end of the list."
+    "If you want to start at a number and go all the way to the end of the list."
    ]
   },
   {
@@ -343,21 +343,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The truth is that for scientific computer. It is more common to use numpy as it much faster than base python."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import the python module."
+    "The truth is that for scientific computing, it is more common to use numpy as it much faster than base python."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import the numpy module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,12 +368,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also saw numpy has built in mathematical functions. For example"
+    "Numpy has built in mathematical functions. For example,"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Task 1:** Conduct some research on the bernoulli and binomial distribution."
+    "**Task 1:** Conduct some research on the Bernoulli and binomial distribution."
    ]
   },
   {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -491,13 +491,6 @@
     "input_array = np.arange(3,15)\n",
     "print(input_array)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -523,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
