--- a/Lecture_notes/Lesson_5_Integration_in_15_mins.ipynb
+++ b/Lecture_notes/Lesson_5_Integration_in_15_mins.ipynb
@@ -30,9 +30,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**What**: Integration is a mathematical technique under the field of caluclus that for our purposes will be used to find the area under curves.\n",
+    "**What**: Integration is a mathematical technique under the field of calculus that for our purposes will be used to find the area under curves.\n",
     "\n",
-    "**Why**: We need integration because we want to find quantities like $\\mathbb{P}(X \\leq 2)$ given $X$ is a continuos RV.\n"
+    "**Why**: We need integration because we want to find quantities like $\\mathbb{P}(X \\leq 2)$ given $X$ is a continuous RV.\n"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The idea is to partition the domain into small intervals. In these interval the function is approxiated by a constant.Thus, we are left with series of retangles which is much easier to compute."
+    "The idea is to partition the domain into small intervals. In these interval the function is approximated by a constant. Thus, we are left with series of retangles which is much easier to compute."
    ]
   },
   {
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This not a calculus course so I am not going prove any results. Instead I will just state some common integral.\n",
+    "This is not a calculus course so I am not going to prove any results. Instead I will just state some common integrals.\n",
     "* $\\int x^n dx = \\frac{1}{n+1}x^{n+1} + c$\n",
     "* $\\int e^{bx} dx = \\frac{1}{b}e^{bx}+ c$"
    ]
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Integrals are linear this means you can add them together and multiple them by scalars.\n",
+    "Integrals are linear this means you can add them together and multiply them by scalars.\n",
     "\n",
     "\n",
     "* $\\int f(x) dx + \\int g(x) dx = \\int( f(x)+  g(x) )dx$\n",
@@ -258,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
