--- a/Lecture_notes/Lesson_6_Probability_gets_serious.ipynb
+++ b/Lecture_notes/Lesson_6_Probability_gets_serious.ipynb
@@ -38,11 +38,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First let us consider the discrete case. Consider the possion distribution with pmf and intensity $\\lambda$,\n",
+    "First let us consider the discrete case. Consider the poisson distribution with pmf and intensity $\\lambda$,\n",
     "\n",
     "$$p_X(x) = \\frac{\\lambda^x e^{-\\lambda}}{x!}$$\n",
     "\n",
-    "The possion distrubution is used to model the number of observation one sees in a interval of time or space."
+    "The poisson distrubution is used to model the number of observation one sees in a interval of time or space."
    ]
   },
   {
@@ -53,14 +53,14 @@
     "\n",
     "$$p_X(x) = \\frac{2^x e^{-2}}{x!}.$$ \n",
     "\n",
-    "This a possion distribution with rate 2."
+    "This a poisson distribution with rate 2."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I have two question;\n",
+    "I have two questions;\n",
     "1. What is the probability one observes **exactly 3** cars in $\\mathcal{T}$.\n",
     "2. What is the probability one observes **at most 3** cars in $\\mathcal{T}$."
    ]
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let us have an example for the continous case.\n",
+    "Now let us have an example for the continuous case.\n",
     "\n",
     "Let $M \\sim \\mathcal{N}(75,20)$ (that is normally distributed with mean 75 and variance 20). Here $M$ can model the score you will get on you exam.\n",
     "\n",
@@ -217,7 +217,7 @@
    "source": [
     "Recall, that because this is a continous RV we can't talk about probabilities at a single point. However, one can ask what is the probability one would get a score of 80 or higher.\n",
     "\n",
-    "Visually we are trying to find this probability."
+    "Visually, we are trying to find this probability."
    ]
   },
   {
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mathematically we are trying to find $\\mathbb{P}(X \\geq 80)$."
+    "Mathematically, we are trying to find $\\mathbb{P}(X \\geq 80)$."
    ]
   },
   {
@@ -300,7 +300,7 @@
    "source": [
     "However, after studying a few years of intense calculas one finds that this integral cannot be evaluated analytically.\n",
     "\n",
-    "So to find to to find $F_X(80)$ just use scipy (It use numerical methods far beyond the scope of this course). "
+    "So to find $F_X(80)$ just use scipy (It uses numerical methods far beyond the scope of this course). "
    ]
   },
   {
@@ -351,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Task 1:** Back in the day we did not have scipy to compute non-standard normal probabilities. People used z-tables. A Z-table displays the probabilities of a standard normal distribution. Recall a standard normal is a normal with a mean 0 and a variance 1. \n",
+    "**Task 1:** Back in the day we did not have scipy to compute non-standard normal probabilities. People used z-tables. A Z-table displays the probabilities of a standard normal distribution. Recall a standard normal is a normal with a mean 0 and variance 1. \n",
     "\n",
     "Let's say $X$ is a non-standard normal with mean $\\mu$ and variance $\\sigma^2$. We convert $X$ into a standard normal by applying the following transformation, \n",
     "\n",
