--- a/Lecture_notes/Lesson_7_What_to_expect.ipynb
+++ b/Lecture_notes/Lesson_7_What_to_expect.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## Expectation <a name=expectation></a>\n",
     "\n",
-    "Often one would like to summurise the a probabilty distribution with one number. This is often the expection. Expection measures the center of mass of a distribution.\n"
+    "Often one would like to summarise the a probabilty distribution with one number. This is often the expectation. Expectation measures the center of mass of a distribution.\n"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is a visual for continuous distrubtion (exponential)."
+    "Here is a visual for a continuous distrubtion (exponential)."
    ]
   },
   {
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For a continuous RV X,\n",
+    "For a continuous RV $X$,\n",
     "\n",
     "\n",
     "$$\\int_{-\\infty}^{\\infty} xf_X(x)dx.$$"
@@ -139,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So each MOST probability distributions have an expection."
+    "MOST probability distributions have an expectation."
    ]
   },
   {
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great!!! Now let us have lets' have an example for the continuous case. Again there may be one or two steps in the you might not understand."
+    "Great!!! Now let's have an example for the continuous case. Again there may be one or two steps in the you might not understand."
    ]
   },
   {
@@ -230,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Clearly, some of these calulations are very advanced. It is common to just look up the expectation in a book or on the internet."
+    "Clearly, some of these calculations are very advanced. It is common to just look up the expectation in a book or on the internet."
    ]
   },
   {
