--- a/Solutions/Solution_Ninja_training_4.ipynb
+++ b/Solutions/Solution_Ninja_training_4.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "## Task 1 <a name=\"n4t1\"></a>\n",
     "\n",
-    "Conduct some research on the bernoulli and binomial distribution."
+    "Conduct some research on the Bernoulli and binomial distribution."
    ]
   },
   {
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The is an added bonus.\n",
+    "This is an added bonus.\n",
     "\n",
     "If you were asked what is the probabity you get at most 4 heads. You would be required to compute\n",
     "\n",
@@ -246,20 +246,6 @@
     "    return x\n",
     "change_even_to_zero_advanced(input_array)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -278,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
