--- a/Lecture_notes/Lesson_3_Probability_enters.ipynb
+++ b/Lecture_notes/Lesson_3_Probability_enters.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " Probability space or a probability triple consist of these three elements ${\\displaystyle (\\Omega ,{\\mathcal {F}},\\mathbb{P})}$\n"
+    " A probability space or a probability triple consists of these three elements ${\\displaystyle (\\Omega ,{\\mathcal {F}},\\mathbb{P})}$\n"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\mathbb{P} (X(\\omega) \\in A)$ denotes the probability of the outcome such that X falls in the range A.\n",
+    "$\\mathbb{P} (X(\\omega) \\in A)$ denotes the probability of the outcome such that $X$ falls in the range $A$.\n",
     "\n",
     "Note that it is $\\mathbb{P} (X(\\omega) \\in A)$ is often written as $\\mathbb{P} (X \\in A)$."
    ]
@@ -199,15 +199,15 @@
    "source": [
     "There are two main types of random variables; Discrete and continuous.\n",
     "\n",
-    "Some discrete examples.\n",
+    "Some discrete examples,\n",
     "* The number you roll on a dice.\n",
     "* The number of tinder matches you get in a week. \n",
-    "* The of times you are late to work or school this year.\n",
+    "* The number of times you are late to work or school this year.\n",
     "\n",
-    "Some continuous examples\n",
+    "Some continuous examples,\n",
     "* The amount of time you have to wait in a queue.\n",
-    "* The number of centermeters you grow this year.\n",
-    "* The number of minutes the bus is late."
+    "* The number of centimeters you grow this year.\n",
+    "* The amount of time the bus is late."
    ]
   },
   {
@@ -218,7 +218,7 @@
     "\n",
     "Let's work with the tinder example.\n",
     "\n",
-    "Assume that the maximum number of matches I get in a we is 3 the a possible pmf could be\n",
+    "Assume that the maximum number of matches I get in a week is 3 then a possible pmf could be\n",
     "\n",
     "$$ p(x) = \\begin{cases}0.2 \\quad \\text{if} \\quad x = 0\\\\\n",
     "                    0.5 \\quad \\text{if} \\quad x = 1\\\\\n",
@@ -235,7 +235,7 @@
     "In English this means that the\n",
     "\n",
     "* probability I get zero tinder matches is 0.2.\n",
-    "* probability I get one tinder matches is 0.5.\n",
+    "* probability I get one tinder match is 0.5.\n",
     "* probability I get two tinder matches is 0.2.\n",
     "* probability I get three tinder matches is 0.1.\n",
     "\n",
@@ -246,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We describe a continuous RV with a probability density function (pdf) $f(x)$. Techniquely $f(x)$ is not $P(X=x)$ as the probablity of a continous RV taking a single value is zero.\n",
+    "We describe a continuous RV with a probability density function (pdf) $f(x)$. Techniquely, $f(x)$ is not $P(X=x)$ as the probablity of a continous RV taking a single value is zero.\n",
     "\n",
     "Example:\n",
     "\n",
@@ -283,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Task 3:** For any two events $A$ and $B$ we have \n",
+    "**Task 3:** Prove that for any two events $A$ and $B$ we have \n",
     "\n",
     "$$\\mathbb{P}(A \\cup B)=\\mathbb{P}(A)+\\mathbb{P}(B)-\\mathbb{P}(A \\cap B)$$"
    ]
@@ -326,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
